add jquery and life

--- a/index/static/index/default.css
+++ b/index/static/index/default.css
@@ -39,7 +39,7 @@ body
     width: 1000px;
     height: 800px; /* auto */
     text-align: left;
-    background-color: #000000;
+    background-color: #ffffff;
 }
 
 #content h1
