--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -1,27 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        {% load staticfiles %}
-
+        {% load static %}
         <link rel="stylesheet" type="text/css" href="{% static 'index/default.css' %}" />
 
-        <script type="text/javascript" src="{% static 'index/banner.js' %}"></script>
         <script type="text/javascript" src="{% static 'index/jquery-1.11.3.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'index/banner.js' %}"></script>
+        <script type="text/javascript" src="{% static 'index/index.js' %}"></script>
+
+        {% block jsscripts %}
+        {% endblock %}
 
         <script type="text/javascript">
-            $(document).ready(function() {
-                var banner = new Banner("banner");
-
-                {% block js %}
-                    $("#content").load("/life #content");
-                {% endblock %}
-            });
-
-            $(document).on("click", "a", function(e) {
-                e.preventDefault();
-                $("#content").load(this.href + " #content");
-                history.replaceState(null, null, this.rel);
-            });
         </script>
 
         <title>coach</title>
