--- a/index/templates/index/empty.html
+++ b/index/templates/index/empty.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        {% block jsscripts %}
+        {% block head %}
         {% endblock %}
     </head>
     <body>
