--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -7,8 +7,8 @@
         <script type="text/javascript" src="{% static 'index/jquery-1.11.3.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'index/banner.js' %}"></script>
         <script type="text/javascript" src="{% static 'index/index.js' %}"></script>
-
-        {% block jsscripts %}
+            
+        {% block head %}
         {% endblock %}
 
         <script type="text/javascript">
