--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -19,7 +19,7 @@
 
     <body>
         <div id="header">
-            <canvas id="banner" width="1000" height="250"></canvas>
+            <canvas id="banner"></canvas>
         </div>
 
         <div id="content">
