--- a/bodybuilding/static/bodybuilding/default.css
+++ b/bodybuilding/static/bodybuilding/default.css
@@ -1,6 +1,14 @@
 table
 {
     border-collapse: collapse;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+select
+{
+    display: block;
+    margin: auto;
 }
 
 td
@@ -10,5 +18,11 @@ td
 
 table, td, th
 {
-    border: 1px solid black;
+    border: 1px solid white;
+}
+
+svg
+{
+    display: block;
+    margin: auto;
 }
