--- a/life/templates/life/life.html
+++ b/life/templates/life/life.html
@@ -1,5 +1,5 @@
 {% extends request.is_ajax|yesno:"index/empty.html,index/index.html" %}
     {% block content %}
-        <h1>THIS IS LIFE</h1>
+        <h1>coach</h1>
         <a href="/bodybuilding/" rel="/bodybuilding/">bodybuilding</a>
     {% endblock %}
