Tweak banner and content size

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -28,7 +28,7 @@
         </div>
         
         <div id="footer">
-            <h4>&copy; 2015 Leo Bezroukov</h4>
+            <h4>&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> Leo Bezroukov</h4>
         </div>
     </div>
     </body>
