--- a/bodybuilding/static/bodybuilding/default.css
+++ b/bodybuilding/static/bodybuilding/default.css
@@ -1,3 +1,12 @@
+:root {
+    --table-background-color: #08A2DD;
+    --table-border-color: #ADD8E6;
+    --table-header-background-color: #08A2DD;
+    --table-header-border-color: #49BAE5;
+    --table-data-color: #08AEED;
+    --table-data-border-color: #ADD8E6;
+}
+
 table
 {
     border-collapse: collapse;
@@ -9,16 +18,63 @@ select
 {
     display: block;
     margin: auto;
-}
-
-td
-{
+    width: 115px;
     padding: 5px;
+    font-size: 16px;
+    background: var(--table-background-color);
+    color: #ffffff;
 }
 
-table, td, th
+table
 {
-    border: 1px solid #000000;
+    width: 1000px
+}
+
+table tr td
+{
+    color: #ffffff;
+    background-color: var(--table-background-color);
+    border: 1px solid var(--table-border-color);
+    padding: 10px 15px 10px 15px;
+}
+
+table .exerciseColumn
+{
+    background-color: var(--table-data-color);
+    border: 3px solid var(--table-data-border-color);
+}
+
+table .headerData td
+{
+    background-color: var(--table-header-background-color);
+    border: 1px solid #ADD8E6;
+    font-size: 16px;
+    text-align: center;
+}
+
+table .weightColumn
+{
+    background-color: var(--table-data-color);
+    border: 3px solid #ADD8E6;
+    text-align: center;
+}
+
+table .repsColumn
+{
+    background-color: var(--table-data-color);
+    border: 3px solid #ADD8E6;
+    text-align: center;
+}
+
+table .cardioRow td
+{
+    border: 3px solid var(--table-border-color);
+    background-color: var(--table-data-color);
+}
+
+table .bottomRow td
+{
+    border-bottom: 3px solid var(--table-data-border-color);
 }
 
 svg
