- create workout table - update bodybuilding models with start/end times, weight, and decimal notations - add random workout generator
TODO:
- create tests for bodybuilding
- change color scheme of table

--- a/bodybuilding/templates/bodybuilding/bodybuilding.html
+++ b/bodybuilding/templates/bodybuilding/bodybuilding.html
@@ -23,7 +23,13 @@
         <div id="debug">
             <a href="/life/" rel="/life/">life</a>
         </div>
-        <select id="datesSelect"></select>
+        <div id="workoutlognav">
+            <span>
+                <button type="button" id="navLeft"><</button>
+                <select id="datesSelect"></select>
+                <button type="button" id="navRight">></button>
+            </span>
+        </div>
         <br />
         <div id="workoutlog"></div>
         <div id="output"></div>
