--- a/bodybuilding/static/bodybuilding/default.css
+++ b/bodybuilding/static/bodybuilding/default.css
@@ -1,23 +1,34 @@
-:root {
+:root
+{
     --table-background-color: #08A2DD;
-    --table-border-color: #ADD8E6;
+    --table-border-color: #f9f9f9;
     --table-header-background-color: #08A2DD;
-    --table-header-border-color: #49BAE5;
-    --table-data-color: #08AEED;
-    --table-data-border-color: #ADD8E6;
+    --table-dataA-color: #EB523F;
+    --table-dataB-color: #155157;
+    --table-data-pixel-width: 1px;
 }
 
-table
+#workoutlognav
 {
-    border-collapse: collapse;
-    margin-left:auto;
-    margin-right:auto;
+    text-align: center;
 }
 
-select
+#workoutlognav span
 {
-    display: block;
-    margin: auto;
+    display: inline;
+}
+
+#workoutlognav button
+{
+    width: 30px;
+    padding: 5px;
+    font-size: 16px;
+    background: var(--table-background-color);
+    color: #ffffff;
+}
+
+#workoutlognav select
+{
     width: 115px;
     padding: 5px;
     font-size: 16px;
@@ -27,54 +38,45 @@ select
 
 table
 {
-    width: 1000px
+    width: 1000px;
+    border-collapse: collapse;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 table tr td
 {
     color: #ffffff;
-    background-color: var(--table-background-color);
-    border: 1px solid var(--table-border-color);
+    border: var(--table-data-pixel-width) solid var(--table-border-color);
     padding: 10px 15px 10px 15px;
+    text-align: center;
+}
+
+table thead .headerData
+{
+    background-color: var(--table-header-background-color);
+    border: 1px solid var(--table-border-color);
+    font-size: 16px;
+}
+
+table .dataA
+{
+    background-color: var(--table-dataA-color);
+}
+
+table .dataB
+{
+    background-color: var(--table-dataB-color);
+}
+
+table .cardioData
+{
+    background-color: var(--table-dataA-color);
 }
 
 table .exerciseColumn
 {
-    background-color: var(--table-data-color);
-    border: 3px solid var(--table-data-border-color);
-}
-
-table .headerData td
-{
-    background-color: var(--table-header-background-color);
-    border: 1px solid #ADD8E6;
-    font-size: 16px;
-    text-align: center;
-}
-
-table .weightColumn
-{
-    background-color: var(--table-data-color);
-    border: 3px solid #ADD8E6;
-    text-align: center;
-}
-
-table .repsColumn
-{
-    background-color: var(--table-data-color);
-    border: 3px solid #ADD8E6;
-    text-align: center;
-}
-
-table .cardioRow td
-{
-    border: 3px solid var(--table-border-color);
-    background-color: var(--table-data-color);
-}
-
-table .bottomRow td
-{
-    border-bottom: 3px solid var(--table-data-border-color);
+    text-align: left;
 }
 
 svg
