--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="{% static 'index/default.css' %}" />
 
         <script type="text/javascript" src="{% static 'index/jquery-1.11.3.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'index/keef.js' %}"></script>
         <script type="text/javascript" src="{% static 'index/banner.js' %}"></script>
         <script type="text/javascript" src="{% static 'index/index.js' %}"></script>
             
