- add initial data - add y2 capability - minor bug fixes

--- a/bodybuilding/static/bodybuilding/default.css
+++ b/bodybuilding/static/bodybuilding/default.css
@@ -27,6 +27,12 @@
     width: 1000px;
 }
 
+#workoutDataNav span
+{
+    user-select: none;
+    cursor: default;
+}
+
 #workoutDataNav div .selected
 {
     background: red;
