--- a/index/static/index/default.css
+++ b/index/static/index/default.css
@@ -54,7 +54,7 @@ body
 {
     height: auto;
     border-top: 3px solid #ffffff;
-    background-color: #a9a9a9;
+    background-color: #11387d;
 }
 
 #footer h4
