--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -5,8 +5,8 @@
         <link bez-base rel="stylesheet" type="text/css" href="{% static 'index/default.css' %}" />
 
         <script bez-base type="text/javascript" src="{% static 'index/jquery-3.6.0.min.js' %}"></script>
-        <script bez-base type="text/javascript" src="{% static 'index/keef.js' %}"></script>
-        <script bez-base type="text/javascript" src="{% static 'index/banner.js' %}"></script>
+        <script bez-base type="text/javascript" src="{% static 'index/bezutil.js' %}"></script>
+        <script bez-base type="text/javascript" src="{% static 'index/banner2.js' %}"></script>
         <script bez-base type="text/javascript" src="{% static 'index/index.js' %}"></script>
 
         {% block head %}
@@ -15,7 +15,7 @@
         <script type="text/javascript">
         </script>
 
-        <title>coach</title>
+        <title>bez</title>
     </head>
 
     <body>
@@ -28,7 +28,7 @@
                 {% endblock %}
             </div>
             <div id="footer">
-                <h4>&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> Leo Bezroukov</h4>
+                <h4>&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> Leonid Bezroukov</h4>
             </div>
         </div>
     </body>
