--- a/life/templates/life/life.html
+++ b/life/templates/life/life.html
@@ -1,4 +1,24 @@
 {% extends request.is_ajax|yesno:"index/empty.html,index/index.html" %}
     {% block content %}
-        <h1>coach</h1>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <h1>coming soon...</h1>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
     {% endblock %}
