--- a/index/static/index/default.css
+++ b/index/static/index/default.css
@@ -21,7 +21,7 @@ body
 
 #header
 {
-    margin: 0 auto 0 auto;
+    margin: 10px auto 10px auto;
     width: 1000px;
     height: 250px;
 }
@@ -30,7 +30,6 @@ body
 {
     float: left;
     background-color: #000000;
-    height: 250px;
 }
 
 #content
