--- a/life/templates/life/life.html
+++ b/life/templates/life/life.html
@@ -1,4 +1,4 @@
 {% extends request.is_ajax|yesno:"index/empty.html,index/index.html" %}
     {% block content %}
-        <br />
+        <h1>life</h1>
     {% endblock %}
