--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -20,6 +20,7 @@
             <div id="header">
                 <canvas id="banner"></canvas>
                 <input id="search" type="text" value="" autofocus />
+                <div id="searchResults"></div>
             </div>
 
             <div id="content">
