--- a/recipes/templates/recipes/recipe.html
+++ b/recipes/templates/recipes/recipe.html
@@ -1,4 +1,7 @@
 {% extends "index/index.html" %}
     {% block content %}
-        
+        <h1>{{ recipe.name }}</h1>
+        <h1>{{ recipe.createdate }}</h1>
+        <h1>{{ recipe.ingredientsText }}</h1>
+        <h1>{{ recipe.directionsText }}</h1>
     {% endblock %}
