--- a/recipes/templates/recipes/recipe.html
+++ b/recipes/templates/recipes/recipe.html
@@ -1,7 +1,7 @@
 {% extends "index/index.html" %}
     {% block content %}
         <h1>{{ recipe.name }}</h1>
-        <h1>{{ recipe.createdate }}</h1>
-        <h1>{{ recipe.ingredientsText }}</h1>
-        <h1>{{ recipe.directionsText }}</h1>
+        <h1>{{ recipe.create_date }}</h1>
+        <h1>{{ recipe.ingredient_text }}</h1>
+        <h1>{{ recipe.direction_text }}</h1>
     {% endblock %}
