--- a/index/static/index/default.css
+++ b/index/static/index/default.css
@@ -56,7 +56,7 @@ body
 
 #searchResults
 {
-    position: fixed;
+    position: absolute;
     background-color: #f9f9f9;
     border: 2px solid #11387d;
     border-top: 0;
