--- a/notes/static/notes/default.css
+++ b/notes/static/notes/default.css
@@ -1,13 +1,14 @@
 #note > p, li {
-    margin-left: 10px;
+    margin-left: 20px;
     font: 100% arial, sans-serif;
+    display: table;
 }
 
 #note > ol {
-    margin-left: 10px;
+    margin-left: 0px;
     list-style: decimal;
+    list-style-position: inside;
 }
-
 
 #note p:hover,li:hover {
     background-color: #add8e8;
@@ -16,8 +17,16 @@
 }
 
 #note > h1 {
+    margin-top: 10px;
+    margin-left: 10px;
     font: 200% arial, sans-serif;
-    margin: 10px;
+    color: #11387d;;
+}
+
+#note > h2 {
+    margin-top: 10px;
+    margin-left: 15px;
+    font: arial, sans-serif;
     color: #11387d;;
 }
 
