Add tests and constants

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         {% load static %}
+        <link bez-base rel="stylesheet" type="text/css" href="{% static 'index/constants.css' %}" />
         <link bez-base rel="stylesheet" type="text/css" href="{% static 'index/default.css' %}" />
 
         <script bez-base type="text/javascript" src="{% static 'index/jquery-3.6.0.min.js' %}"></script>
