--- a/recipes/templates/recipes/recipe.html
+++ b/recipes/templates/recipes/recipe.html
@@ -1,7 +1,13 @@
 {% extends "index/index.html" %}
     {% block content %}
+    <div id="recipe">
         <h1>{{ recipe.name }}</h1>
-        <h1>{{ recipe.create_date }}</h1>
-        <h1>{{ recipe.ingredient_text }}</h1>
-        <h1>{{ recipe.direction_text }}</h1>
+        {% for ingredient in recipe.ingredients %}
+            <span>{{ ingredient.quantity }}</span><span>{{ ingredient.unit }}</span><span>{{ ingredient.food }}</span><br>
+        {% endfor %}
+        {% for step in recipe.directions %}
+            <p>{{ step }}</p>
+        {% endfor %}
+        
+    </div>
     {% endblock %}
